--- a/TGMeituan/android/app/build.gradle
+++ b/TGMeituan/android/app/build.gradle
@@ -84,7 +84,12 @@ def enableProguardInReleaseBuilds = false
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    buildToolsVersion '25.0.0'
+
+    aaptOptions {
+        cruncherEnabled = false
+        useNewCruncher = false
+    }
 
     defaultConfig {
         applicationId "com.tgmeituan"
